<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageFieldsActivity"
    android:id="@+id/manageFieldsLayout">

    <TextView
        android:id="@+id/fieldName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="180dp"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="414dp"
        android:layout_height="352dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="חדר כושר"
        app:layout_constraintBottom_toTopOf="@+id/spinnerChooseField"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBasketball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="כדורסל"
        app:layout_constraintBottom_toTopOf="@+id/spinnerChooseField"
        app:layout_constraintStart_toEndOf="@+id/btnGym" />

    <Button
        android:id="@+id/btnFootball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="34dp"
        android:text="כדורגל"
        app:layout_constraintBottom_toTopOf="@+id/spinnerChooseField"
        app:layout_constraintStart_toEndOf="@+id/btnBasketball"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/dateView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="72dp"
        android:text=":תאריך"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerChooseField"
        android:layout_width="282dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/dateTxtt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtFieldNamesTitle7"
        android:layout_width="107dp"
        android:layout_height="33dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="16dp"
        android:text=":מגרש"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dateView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerChooseField" />

    <TextView
        android:id="@+id/dateTxtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="64dp"
        android:text="@string/selectDate"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toStartOf="@+id/dateView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFieldTypeTitle7"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="36dp"
        android:text=":סוג מגרש"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtFieldNamesTitle7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFootball" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="29dp"
        android:text="ניהול מגרשים"
        app:layout_constraintBottom_toTopOf="@+id/btnGym"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="backClick"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="164dp"
        android:text="הסרה"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="בחר שעה"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />
</androidx.constraintlayout.widget.ConstraintLayout>