...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="150dp"
        android:autofillHints="@string/email"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle_txt"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/password"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="162dp"
        android:onClick="loginClick"
...
