<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/adminbg"
    tools:context=".AdminMainActivity">

    <TextView
...
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/manageFieldsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="40dp"
...
